--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -316,7 +316,7 @@
 
     <!-- Start Partner Area  
     ============================================= -->
-    <div class="partner-style-one-area default-padding">
+    <!-- <div class="partner-style-one-area default-padding">
         <div class="container">
             <div class="row align-center">
                 <div class="col-lg-5">
@@ -339,7 +339,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Partner Area -->
 
     <!-- Start Team 
@@ -614,9 +614,12 @@
     ============================================= -->
     <div class="testimonial-style-one-area default-padding">
         <div class="container">
+
+            <div class="h4 sub-heading" id="testimonial-heading">Testimonials</div>
+
             <div class="row align-center">
 
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4">
                     <div class="testimonial-thumb">
                         <div class="thumb-item">
                             <img src="../../../../assets/img/illustration/5.png" alt="illustration">
@@ -625,7 +628,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-7 offset-lg-1">
                     <div class="testimonial-carousel swiper">
@@ -643,16 +646,16 @@
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
-                                            <h2>Exceptional Service Delivery</h2>
+                                            <h2>Reliable and Professional</h2>
                                             <p>
-                                                “Partnering with this team has transformed our business strategy. Their expertise, attention to detail, and innovative solutions have significantly improved our operations. Highly recommend for anyone seeking top-notch consulting services.”
+                                                “Kwamu Consulting Services has been a game-changer for our business. Their expert guidance and strategic insights helped us streamline our operations and increase profitability. If you need results, look no further!”
                                             </p>
                                         </div>
                                         <div class="provider">
                                             <i class="flaticon-quote"></i>
                                             <div class="info">
-                                                <h4>Emma R. Sanders</h4>
-                                                <span>Operations Director</span>
+                                                <h4>Chukwuemeka Adeyemi</h4>
+                                                <span>Managing Director.</span>
                                             </div>
                                         </div>
                                     </div>
@@ -671,16 +674,16 @@
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                             </div>
-                                            <h2>Innovative Business Solutions</h2>
+                                            <h2>Strategic and Results-Driven</h2>
                                             <p>
-                                                “Their insights and tailored strategies have given us a competitive edge in the market. From analyzing our challenges to offering actionable plans, they truly understand how to drive sustainable growth. A trusted partner for any business!”
+                                                “Thanks to Kwamu Consulting Services, our business has grown beyond our expectations. Their solutions are practical, tailored, and most importantly, effective. I highly recommend them to any serious entrepreneur.” 
                                             </p>
                                         </div>
                                         <div class="provider">
                                             <i class="flaticon-quote"></i>
                                             <div class="info">
-                                                <h4>James T. Carter</h4>
-                                                <span>CEO, Visionary Inc.</span>
+                                                <h4>Fatima Bello</h4>
+                                                <span>CEO, Bello Agrotech</span>
                                             </div>
                                         </div>
                                     </div>
