--- a/src/app/shared/reuseableComponents/footer/footer/footer.component.html
+++ b/src/app/shared/reuseableComponents/footer/footer/footer.component.html
@@ -125,18 +125,18 @@
           <div class="col-lg-4 col-md-6 footer-item">
             <ul class="f-item link" style="display: flex; list-style: none; gap: 15px; padding: 0; margin: 0;">
               <li style="display: inline-block;">
-                <a href="https://x.com/BDOGlobal" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white;">
+                <a href="#" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white;">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
               <li style="display: inline-block;">
-                <a href="https://www.youtube.com/@BDOInternational" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white; position: relative; top: -10px;">
+                <a href="#" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white; position: relative; top: -10px;">
                   <i class="fab fa-youtube"></i>
                 </a>
               </li>
               <li style="display: inline-block;">
                 <a
-                  href="https://www.linkedin.com/company/bdo-nigeria/?originalSubdomain=ng" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white;position: relative; top: -10px;"
+                  href="#" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border: 2px solid white;position: relative; top: -10px;"
                 >
                   <i class="fab fa-linkedin-in"></i>
                 </a>
