--- a/src/app/shared/reuseableComponents/header/header/header.component.html
+++ b/src/app/shared/reuseableComponents/header/header/header.component.html
@@ -15,17 +15,17 @@
         <div class="social">
           <ul>
             <li>
-              <a href="https://x.com/BDOGlobal">
+              <a href="#">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/@BDOInternational">
+              <a href="#">
                 <i class="fab fa-youtube"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/company/bdo-nigeria/?originalSubdomain=ng">
+              <a href="#">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
@@ -57,7 +57,7 @@
             >
             <mat-icon style="font-size: 30px;">menu</mat-icon>
             </button>
-            <a class="navbar-brand" routerLink="/home">
+            <a class="navbar-brand" href="/home">
               <img
                 src="../../../../../assets/img/logo/KWAMU Logo.png"
                 class="logo"
